test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-unmanaged.good
init-field-dflt-nonnil-owned-from-nonnil-unmanaged.chpl:11: error: cannot initialize 'owned MyClass' from a 'unmanaged MyClass'
